# open_oura

./: .gitignore  README.md  requirements.txt
crates/: README.md
crates/oura-analysis/src/: baseline.rs  lib.rs  sleep.rs  sleep_debt.rs  temperature.rs
crates/oura-cli/: Cargo.toml
crates/oura-cli/src/: accel_log.rs  game.rs  main.rs  motion_server.rs  poc.rs  viz.rs
crates/oura-core/src/: ble.rs  client.rs  events.rs  storage.rs  transport.rs
crates/oura-link/: Cargo.toml
crates/oura-link/src/: transport.rs
docs/: activity-model-runner.md  data-recovery-map.md  horizon-ring3-protocol-cheatsheet.md  native-decoder.md  poc.md  rdata-capacity-probe.md  ring-5-observations.md  ring-5-research-plan.md  ring-features.md  sync-orchestration.md
docs/algorithms/: README.md  sleepnet.md
scripts/: e2e-hardware.sh
tools/: ble_scan.py  oura_protocol.py  oura_realtime_listener.py  run_activity_model.py  run_models.py  run_sleep_model.py
