[package]
name = "oura-cli"
description = "Command-line client for reading data directly from an Oura ring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "oura"
path = "src/main.rs"

[dependencies]
oura-protocol = { path = "../oura-protocol" }
oura-link = { path = "../oura-link" }
oura-store = { path = "../oura-store" }
oura-analysis = { path = "../oura-analysis" }
clap = { version = "=4.5.37", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hex = "0.4"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
oura-link = { path = "../oura-link", features = ["test-util"] }
tempfile = "3"
